--- a/web/app/views/layouts/classifier/chips.js.erb
+++ b/web/app/views/layouts/classifier/chips.js.erb
@@ -1,7 +1,6 @@
 (function(){
     let chipEventElem = document.getElementById('<%= dom_id @event, "chip_#{@feature}" %>');
-    let chipEventChild = chipEventElem.lastElementChild
 
-    chipEventElem.removeChild(chipEventChild);
+    chipEventElem.innerHTML = "";
     chipEventElem.insertAdjacentHTML('beforeend', '<%= j render partial: 'layouts/classifier/chips', locals: {event: @event, feature: @feature} %>');
 })()
