--- a/web/app/views/layouts/classifier/_classifier.html.erb
+++ b/web/app/views/layouts/classifier/_classifier.html.erb
@@ -11,13 +11,12 @@
 <% cache @events do %>
 	<% @events.each do |event| %>
 		<% cache(event) do %>
-			<tr data-controller='classifier' data-classifier-identifier="<%= event.id %>">
+			<tr>
 				<td><img src="<%= get_image_url event, :"list-mobile" %>"></td>
 				<td> <a href="<%= event.url %>"> <%= limit_name_size event.details_name %> </a> </td>
 				<td><%= event.place_details_name %></td>
-				<td data-target="classifier.dialogButton" data-action="click->classifier#openDialog">
+				<td>
 					<%= limit_description_size event.details_description, 400 %> <br/>
-					<%= event.kinds.map{|kind| kind['name']}.to_s %>
 				</td>
 				<td id="<%= dom_id event, 'chip_themes' %>">
 					<%= render partial: 'layouts/classifier/chips', locals: {event: event, feature: 'themes'} %>
@@ -28,8 +27,8 @@
 				<td id="<%= dom_id event, 'chip_personas' %>">
 					<%= render partial: 'layouts/classifier/chips', locals: {event: event, feature: 'personas'} %>
 				</td>
-				<td>
-					<%= render partial: 'layouts/classifier/kinds', locals: {event: event, button_text: 'Editar'} %>
+				<td id="<%= dom_id event, 'classifier_kinds' %>">
+					<%= render partial: 'layouts/classifier/kinds', locals: {event: event} %>
 				</td>
 			</tr>
 		<% end %>
