Complete page of retrain with tags and kinds with input

--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -43,7 +43,7 @@
 </div>
 
 <ul>
-  <% @event.similar_to.each do |similar| %>
+  <% @event.similar_data.each do |similar| %>
     <li><%= Event.find(similar).details_name %></li>
   <% end %>
 </ul>
