--- a/web/app/views/layouts/classifier/_tags.html.erb
+++ b/web/app/views/layouts/classifier/_tags.html.erb
@@ -14,21 +14,24 @@
 			<div class="mdc-dialog__surface">
 				<h2 class="mdc-dialog__title" id="my-dialog-title"><%= type.capitalize %></h2>
 				<div class="mdc-dialog__content" id="my-dialog-content">
-					<div data-controller="chip" data-chip-type="tags" data-target="chip.chipContainer tags.tags" class="me-chip-set mdc-chip-set mdc-chip-set--filter">
-						<% event.ml_data_all.each do |tag| %>
-							<div data-target="chip.chip" data-action="click->chip#select"
-								class="me-chip mdc-chip <%= event.tags_of_type(type).include?(tag) ? 'mdc-chip--selected' : nil %>"
-								data-chip-tag-type="things" data-turbolinks-scroll="false">
-								<div class="mdc-chip__checkmark">
-									<svg class="mdc-chip__checkmark-svg" viewBox="-2 -3 30 30">
-										<path class="mdc-chip__checkmark-path" fill="none" stroke="black" d="M1.73,12.91 8.1,19.28 22.79,4.59" />
-									</svg>
+					<div data-controller="chip" data-target="tags.tags">
+						<div data-chip-type="tags" data-target="chip.chipset" class="me-chip-set mdc-chip-set mdc-chip-set--filter">
+							<% event.ml_data_all.each do |tag| %>
+								<div data-target="chip.chip" data-action="click->chip#select"
+									class="me-chip mdc-chip <%= event.tags_of_type(type).include?(tag) ? 'mdc-chip--selected' : nil %>"
+									data-chip-tag-type="things" data-turbolinks-scroll="false">
+									<div class="mdc-chip__checkmark">
+										<svg class="mdc-chip__checkmark-svg" viewBox="-2 -3 30 30">
+											<path class="mdc-chip__checkmark-path" fill="none" stroke="black" d="M1.73,12.91 8.1,19.28 22.79,4.59" />
+										</svg>
+									</div>
+									<div class="mdc-chip__text">
+										<%= tag.downcase %>
+									</div>
 								</div>
-								<div class="mdc-chip__text">
-									<%= tag.downcase %>
-								</div>
-							</div>
-						<% end %>
+							<% end %>
+						</div>
+						<%= render partial: 'layouts/classifier/input' %>
 					</div>
 				</div>
 				<footer class="mdc-dialog__actions">
