--- a/web/app/views/feeds/train.html.erb
+++ b/web/app/views/feeds/train.html.erb
@@ -3,5 +3,5 @@
   <%= notice %>
 </p>
 <table class="me-table">
-  <%= render partial: 'layouts/classifier/classifier', object: @events %>
+  <%= render partial: 'layouts/classifier/classifier', object: @items %>
 </table>
