--- a/web/app/assets/stylesheets/components/me-card.scss
+++ b/web/app/assets/stylesheets/components/me-card.scss
@@ -125,12 +125,28 @@ $description-color: $font-secondary-color;
     }
 
     & .mdc-card__media {
-      transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
+      //transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
+      opacity: 0.75;
+      transition: opacity 0.2s ease;
       // box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.12);
+    }
+
+    &.me-card--active{
+      //transform: scale(2, 2);
+      //background: white !important;
+      //z-index: 2;
+      //opacity: 1;
+      //border: 1px solid #f9f9f9 !important;
+      //transition: all 0.6s ease;
+      //
+      //& .me-card___animate {
+      //  transform: scale(0.5,0.5) translate(-38%,-50%);
+      //}
     }
 
     &:hover {
       & .mdc-card__media {
+        opacity: 1;
       }
     }
   }
