--- a/web/app/assets/stylesheets/components/me-feed.scss
+++ b/web/app/assets/stylesheets/components/me-feed.scss
@@ -15,14 +15,29 @@ $mdc-layout-grid-columns: (
 .me-feed {
 
   &__section {
-    margin: 0 0 120px 0;
+    margin: 0 0 35px 0;
 
     @include mdc-layout-grid-media-query_("phone") {
       margin: 0;
     }
+
+    & .mdc-typography--headline4 {
+      margin: 12px 0;
+    }
+
+    & .me-filter {
+      display: block;
+      margin: 16px 0;
+    }
+
+    & .me-feed__divider {
+      margin: 0;
+    }
+  
   }
 
   &__divider {
+    display: none;
     width: 100px;
     height: 2px;
     background: $brand-color;
@@ -38,7 +53,10 @@ $mdc-layout-grid-columns: (
   }
 
   & .me-chip-set {
-    display: contents;
+    margin: 2px 0 6px 0;
+    //background: #f9f9f9;
+    border-radius: 3px;
+    display: inline;
   }
   
 
@@ -63,7 +81,7 @@ $mdc-layout-grid-columns: (
 
   & .mdc-layout-grid {
     --mdc-layout-grid-margin-desktop: 0;
-    --mdc-layout-grid-gutter-desktop: 12px;
+    --mdc-layout-grid-gutter-desktop: 16px;
 
     @include mdc-layout-grid-media-query_("phone") {
       background-color: $surface-color;
