--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -7,7 +7,7 @@
   data-event-favorited="<%= current_user and current_user.taste_events_saved?(@event.id) if current_user and current_user %>"
   data-event-identifier="<%= @event.id %>"
   data-event-modifier="single">
-  <div class="mdc-card__media mdc-card__media--16-9" style="background-image: url('<%= get_image_url @event, :single %>')">
+  <div class="mdc-card__media mdc-card__media--16-9" style="<%= get_image_style_attr @event, :single %>">
     <% if current_user %>
     <div class="me-card__like-button" data-action="click->event#like">
       <div data-target="event.like">
