--- a/web/app/views/feeds/_section.html.erb
+++ b/web/app/views/feeds/_section.html.erb
@@ -1,108 +1,97 @@
-<div class="me-feed__section">
+<% cache [current_user, identifier, params[:categories], params[:kinds], params[:ocurrences]], expires_in: 1.day do %>
+  <div class="me-feed__section">
   <h2 class="mdc-typography--<%= type == :large ? 'headline4' : 'headline5' %>">
     <%= titles[:principal] %>
-    <% if filters %>
-      <div data-controller="filter" data-target="filter.filterContainer" class="me-filter">
-        <% if filters[:personas] %>
-          <div data-controller="chip" data-chip-type="filter" data-target="chip.chipset filter.personas"
-        class="me-chip-set mdc-chip-set mdc-chip-set--filter">
-            <% Event.active.collect(&:personas_primary_name).uniq.each do |persona| %>
-              <div data-target="chip.chip" data-action="click->chip#select"
-                class="me-chip mdc-chip <%= params[:personas] and params[:personas].include?(persona) ? 'mdc-chip--selected' : nil %>">
-                <div class="mdc-chip__checkmark">
-                  <svg class="mdc-chip__checkmark-svg" viewBox="-2 -3 30 30">
-                    <path class="mdc-chip__checkmark-path" fill="none" stroke="black" d="M1.73,12.91 8.1,19.28 22.79,4.59" />
-                  </svg>
-                </div>
-                <div class="mdc-chip__text">
-                  <%= persona.capitalize %>
-                </div>
-              </div>
-            <% end %>
-          </div>
-        <% end %>
-        <% if filters[:categories] %>
-          <%= titles[:categories] %>
-          <div data-controller="chip" data-chip-type="filter" data-target="chip.chipset filter.categories"
-        class="me-chip-set mdc-chip-set mdc-chip-set--filter">
-            <% Event.with_personas(params[:personas]).collect(&:categories_primary_name).uniq.each do |category| %>
-              <div data-target="chip.chip" data-action="click->chip#select"
-                class="me-chip mdc-chip <%= params[:categories] and params[:categories].include?(category) ? 'mdc-chip--selected' : nil %>"
-                data-turbolinks-scroll="false">
-                <div class="mdc-chip__checkmark">
-                  <svg class="mdc-chip__checkmark-svg" viewBox="-2 -3 30 30">
-                    <path class="mdc-chip__checkmark-path" fill="none" stroke="black" d="M1.73,12.91 8.1,19.28 22.79,4.59" />
-                  </svg>
-                </div>
-                <div class="mdc-chip__text">
-                  <%= category.capitalize %>
-                </div>
-              </div>
-            <% end %>
-          </div>
-        <% end %>
-        <% if filters[:occurences] %>
-          <%= titles[:occurences] %>
-          <div data-controller="chip" data-chip-type="filter" data-target="chip.chipset filter.ocurrences"
-        class="me-chip-set mdc-chip-set mdc-chip-set--filter">
-            <% ['hoje', 'amanhã'].each do |ocurrence| %>
-              <div data-target="chip.chip" data-action="click->chip#select"
-                class="me-chip mdc-chip <%= params[:ocurrences] and params[:ocurrences].include?(ocurrence) ? 'mdc-chip--selected' : nil %>"
-                data-turbolinks-scroll="false">
-                <div class="mdc-chip__checkmark">
-                  <svg class="mdc-chip__checkmark-svg" viewBox="-2 -3 30 30">
-                    <path class="mdc-chip__checkmark-path" fill="none" stroke="black" d="M1.73,12.91 8.1,19.28 22.79,4.59" />
-                  </svg>
-                </div>
-                <div class="mdc-chip__text">
-                  <%= ocurrence.capitalize %>
-                </div>
-              </div>
-            <% end %>
-          </div>
-          .
-        <% end %>
-      </div>
-    <% end %>
   </h2>
   <div class="me-feed__divider"></div>
-  <div class="mdc-layout-grid">
+    <% if filters %>
+    <div data-controller="filter" data-filter-section-identifier="<%= identifier %>" data-target="filter.filterContainer" class="me-filter">
+      <% if filters[:personas] %>
+        <div data-controller="chip" data-chip-type="filter" data-target="chip.chipset filter.personas"
+             class="me-chip-set mdc-chip-set mdc-chip-set--filter">
+          <% Event.active.collect(&:personas_primary_name).uniq.each do |persona| %>
+            <div data-target="chip.chip" data-action="click->chip#select"
+                 class="me-chip mdc-chip <%= params[:personas] and params[:personas].include?(persona) ? 'mdc-chip--selected' : nil %>">
+              <div class="mdc-chip__checkmark">
+                <svg class="mdc-chip__checkmark-svg" viewBox="-2 -3 30 30">
+                  <path class="mdc-chip__checkmark-path" fill="none" stroke="black" d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
+                </svg>
+              </div>
+              <div class="mdc-chip__text">
+                <%= persona.capitalize %>
+              </div>
+            </div>
+          <% end %>
+        </div>
+      <% end %>
+      <% if filters[:categories] %>
+        <%= titles[:categories] %>
+        <%= render partial: 'feeds/filter', locals: {
+            initial_filters:              items[:categories],
+            params_filters:               params[:categories],
+            filters_that_exist_in_events: items[:categories],
+            icon_type:                    'filter_none',
+            type:                         'categories'
+        } %>
+      <% end %>
+      <% if filters[:kinds] && params[:categories] %>
+        <%= titles[:kinds] %>
+        <%= render partial: 'feeds/filter', locals: {
+            initial_filters:              items[:kinds],
+            params_filters:               params[:kinds],
+            filters_that_exist_in_events: items[:kinds],
+            icon_type:                    'filter_list',
+            type:                         'kinds'
+        } %>
+      <% end %>
+      <% if filters[:ocurrences] %>
+        <%= titles[:ocurrences] %>
+        <%= render partial: 'feeds/filter', locals: {
+            initial_filters:              items[:ocurrences],
+            params_filters:               params[:ocurrences],
+            filters_that_exist_in_events: items[:ocurrences],
+            icon_type:                    'today',
+            type:                         'ocurrences'
+        } %>
+      <% end %>
+    </div>
+  <% end %>
+    <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner">
-      <% events.each do |event| %>
+      <% items[:events].each do |event| %>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone">
           <div class="me-card--feed mdc-card mdc-card--outlined event-<%= event.id %>" data-controller="event"
-          data-target="event.event" data-action="mouseover->event#showEventDetails"
-            data-event-favorited="<%= current_or_guest_user.taste_events_saved? event.id if current_user %>"
-            data-event-identifier="<%= event.id %>">
+               data-target="event.event" data-action="mouseover->event#showEventDetails"
+               data-event-favorited="<%= current_or_guest_user.taste_events_saved? event.id if current_user %>"
+               data-event-identifier="<%= event.id %>">
             <% if current_user %>
               <div class="me-card__like-button" data-action="click->event#like">
                 <div data-target="event.like">
-                  <button data-target="event.likeButton" 
-                  id="add-to-favorites"
-                  class="me-icon-button mdc-icon-button <%= 'mdc-icon-button--on' if current_or_guest_user.taste_events_saved?(event.id) %>"
-                  aria-label="Add to favorites" 
-                  aria-hidden="true" 
-                  aria-pressed="false">
+                  <button data-target="event.likeButton"
+                          id="add-to-favorites"
+                          class="me-icon-button mdc-icon-button <%= 'mdc-icon-button--on' if current_or_guest_user.taste_events_saved?(event.id) %>"
+                          aria-label="Add to favorites"
+                          aria-hidden="true"
+                          aria-pressed="false">
                     <i class="material-icons-sharp mdc-icon-button__icon mdc-icon-button__icon--on">mood</i>
                     <i class="material-icons-sharp mdc-icon-button__icon">sentiment_satisfied</i>
                   </button>
                 </div>
               </div>
             <% end %>
-            <div class="mdc-card__media mdc-card__media--16-9"
-            style="background-image: url('<%= get_image_url event %>')">
+            <div class="mdc-card__media mdc-card__media--16-9" style="<%= get_image_style_attr event %>">
               <a href="<%= event.url %>">
                 <div data-target="event.overlay" class="me-card__overlay mdc-ripple-surface"></div>
               </a>
               <% if false %>
                 <div class="me-card__like-button" data-action="click->event#like">
                   <div data-target="event.like">
-                    <button data-target="event.likeButton" 
-                  id="add-to-favorites"
-                  class="me-icon-button mdc-icon-button <%= 'mdc-icon-button--on' if current_or_guest_user.taste_events_saved?(event.id) %>"
-                  aria-label="Add to favorites" 
-                  aria-hidden="true" 
-                  aria-pressed="false">
+                    <button data-target="event.likeButton"
+                            id="add-to-favorites"
+                            class="me-icon-button mdc-icon-button <%= 'mdc-icon-button--on' if current_or_guest_user.taste_events_saved?(event.id) %>"
+                            aria-label="Add to favorites"
+                            aria-hidden="true"
+                            aria-pressed="false">
                       <i class="material-icons-sharp mdc-icon-button__icon mdc-icon-button__icon--on">mood</i>
                       <i class="material-icons-sharp mdc-icon-button__icon">sentiment_satisfied</i>
                     </button>
@@ -116,7 +105,7 @@
               </span>
               <span aria-hidden="true"> · </span>
               <span class="me-card__date" data-target="event.date">
-                <%= event.day_of_week %> <%= format_hour event.first_day_time %> 
+                <%= event.day_of_week['formatted'] %> <%= format_hour event.first_day_time %>
                 <%= " · R$#{event.details_prices.min}" if event.details_prices.present? %>
               </span>
             </div>
@@ -131,15 +120,15 @@
               <div class="me-card__place" data-target="event.place">
                 <%= limit_place_name_size event.place_details_name %>
               </div>
-              <% if current_user.admin? %>
-                <%= event.personas %>
-              <% end %>
+              <%# if current_user&.admin? %>
+              <%#= event.personas %>
+              <%# end %>
             </div>
           </div>
         </div>
       <% end %>
     </div>
-    <% if events.empty? %>
+      <% if items.empty? %>
       <div class="me-card me-card--notice mdc-card mdc-card--outlined">
         <div class="me-card__primary-section">
           <i class="material-icons">
@@ -157,3 +146,4 @@
     <% end %>
   </div>
 </div>
+<% end %>
