--- a/web/app/assets/stylesheets/components/me-favorite.scss
+++ b/web/app/assets/stylesheets/components/me-favorite.scss
@@ -102,9 +102,9 @@ $gutter: 6px;
     }
 
     &__title {
-      color: $font-secondary-color;
+      color: $font-tertiary-color;
       font-size: 13px;
-      margin: 4px 0 0 0px;
+      margin: 4px 0 0 0;
       font-weight: 400;
       padding-right: 6px;
     }
@@ -113,13 +113,12 @@ $gutter: 6px;
       color: $font-secondary-color;
       text-transform: uppercase;
       font-size: 11px;
-      margin: 8px 0 0 0px;
+      margin: 8px 0 3px 0;
       font-weight: 800;
+      min-height: 1.1em;
     }
 
     &__remove {
-      width: 6px;
-      height: 6px;
       background: $icon-background-color;
       position: absolute;
       top: 3px;
@@ -135,6 +134,6 @@ $gutter: 6px;
   & .me-icon__group {
     position: absolute;
     right: 0;
-    top: 0px;
+    top: 0;
   }
 }
