--- a/web/app/assets/stylesheets/components/me-icon.scss
+++ b/web/app/assets/stylesheets/components/me-icon.scss
@@ -19,14 +19,16 @@
     background: darken($color: $icon-background-color, $amount: 5%);
   }
 
-  &--scroll-left {
-    width: 20px;
-    height: 20px;
-  }
+  &--scroll-left, &--scroll-right {
+    width: 48px;
+    height: 48px;
+    z-index: 2;
+    padding: 12px;
+    transition: opacity 0.4s ease;
 
-  &--scroll-right {
-    width: 20px;
-    height: 20px;
+    & .iron-icon {
+      fill: $font-tertiary-color;
+    }
   }
 
   &--off {
